Fill up index file a bit

--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <style>
+        body {
+            font-family: 'Avenir', Helvetica, Arial, sans-serif;
+            font-size: 1.3em;
+            color: #d8d8d8;
+            padding: 0.8em 2.8em;
+        }
+        html { background-color: #263342; }
+        a { color: #4bc7cc; }
+    </style>
+</head>
+
 <body>
-    <a href="https://ermanh.github.io/pineoak/">PineOak</a> - parallel treebank visualizer
+    <h1>Herman Leung</h1>
+    <h3>Projects</h3>
+    <p><a href="https://ermanh.github.com/trieregex/">
+        TrieRegEx</a> - Python 
+        <a href="https://pypi.org/project/trieregex/">package</a>
+        for building trie-based regular expressions</p>
+
+    <p><a href="https://ermanh.github.io/pineoak/">
+        PineOak (viz)</a> - parallel treebank visualizer</p>
+
+    <p><a href="https://linguistics.berkeley.edu/~wiyot/">
+        Wiyot Lanugage Database</a> - dictionary and text database with audio</p>
+    
 </body>
 
 </html>
