--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <h1>Herman Leung</h1>
     <h2>Projects</h2>
-    <p><a href="https://ermanh.github.com/trieregex/">
+    <p><a href="https://github.com/ermanh/trieregex/">
         TrieRegEx</a> - Python 
         <a href="https://pypi.org/project/trieregex/">package</a>
         for building trie-based regular expressions</p>
