Add one more section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
     <p><a href="https://linguistics.berkeley.edu/~wiyot/">
         Wiyot Lanugage Database</a> - dictionary and text database with audio</p>
+    <h2>Profiles</h2>
+    <p><a href="https://linguistics.berkeley.edu/~herman/">Academic</a></p>
+    <p><a href="https://github.com/ermanh">GitHub</a></p>
 </body>
 
 </html>
