Add TableConc to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Herman Leung</title>
     <style>
         body {
             font-family: 'Avenir', Helvetica, Arial, sans-serif;
@@ -23,6 +24,10 @@
         TrieRegEx</a> - Python 
         <a href="https://pypi.org/project/trieregex/">package</a>
         for building trie-based regular expressions</p>
+
+    <p><a href="https://ermanh.github.io/tableconc/">
+        TableConc</a> - Concordance search tool for tabular data
+        (<a href="https://github.com/ermanh/tableconc/">source</a>)</p>
 
     <p><a href="https://ermanh.github.io/pineoak/">
         PineOak (viz)</a> - parallel treebank visualizer</p>
