--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         for building trie-based regular expressions</p>
 
     <p><a href="https://ermanh.github.io/tableconc/">
-        TableConc</a> - Concordance search tool for tabular data
+        TableConc</a> - concordance search tool for tabular data
         (<a href="https://github.com/ermanh/tableconc/">source</a>)</p>
 
     <p><a href="https://ermanh.github.io/pineoak/">
