--- a/tableconc/index.html
+++ b/tableconc/index.html
@@ -359,7 +359,7 @@
             <span class="close" onclick="document.getElementById('modal-about').style.display = 'none';">&times;</span>
             <h1 style="text-align:center;">TableConc</h1>
             <p>
-                TableConc is a concordance search tool for tabular data.              
+                TableConc (1.0.0-beta) is a concordance search tool for tabular data.              
                 The following file formats are supported:
             </p>
             <table style="margin: 0 0 0 20px;">
