Update tableconc demo

--- a/tableconc/index.html
+++ b/tableconc/index.html
@@ -68,7 +68,9 @@
             </div>
             &nbsp;&nbsp;
             <div id="file-div">
-                <input id="choose-file" type="file" accept=".csv,.tsv,.txt,.json" style="width:200px;">
+                <input id="choose-file" type="file" 
+                 accept=".csv,.tsv,.txt,.json,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-excel" 
+                 style="width:200px;">
                 &nbsp;&nbsp;
                 <input id="column-headers" type="checkbox" checked>
                 <label id="column-headers-label" for="column-headers">Contains headers</label>
